# bazel-playground

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
cmd/testclient/: BUILD.bazel  main.go
cmd/testcmd/: BUILD.bazel  main.go
cmd/testserver/: BUILD.bazel  main.go
cmd/testsimplecmd/: BUILD.bazel
pkg/: BUILD.bazel  helper.go
pkg/helper/: BUILD.bazel
proto/: BUILD.bazel  msg.proto
proto/testproto/: BUILD.bazel  msg.proto
types/: BUILD.bazel  msg.proto  msg2.proto  testserver.proto
