load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

go_proto_library(
    name = "msg_go_proto",
    importpath = "github.com/jimmyl02/bazel-playground/types",
    proto = ":types_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "types",
    embed = [":msg_go_proto"],
    importpath = "github.com/jimmyl02/bazel-playground/types",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "types_proto",
    srcs = [
        "msg.proto",
        "msg2.proto",
    ],
    visibility = ["//visibility:public"],
)
