load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testclient_lib",
    srcs = ["main.go"],
    importpath = "github.com/jimmyl02/bazel-playground/cmd/testclient",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/testproto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

go_binary(
    name = "testclient",
    embed = [":testclient_lib"],
    visibility = ["//visibility:public"],
)
