load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testcmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/jimmyl02/bazel-playground/cmd/testcmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/helper",
        "@com_github_moznion_go_optional//:go-optional",
    ],
)

go_binary(
    name = "testcmd",
    embed = [":testcmd_lib"],
    visibility = ["//visibility:public"],
)
