load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/jimmyl02/bazel-playground/cmd/testserver",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "testserver",
    embed = [":testserver_lib"],
    visibility = ["//visibility:public"],
)
