load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/jimmyl02/bazel-playground/cmd/testserver",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/testproto",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "testserver",
    embed = [":testserver_lib"],
    visibility = ["//visibility:public"],
)
